Slides 03: rename gps images

--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -395,5 +395,13 @@
     doi={10.1109/ROBOT.1998.677362}
 }
 
-
+[GNSS] Global Positioning System: Signals, Measurements, and Performance
+@book{misra2006global,
+  title={Global Positioning System: Signals, Measurements, and Performance},
+  author={Misra, P. and Enge, P.},
+  isbn={9780970954411},
+  url={https://books.google.com.ar/books?id=pv5MAQAAIAAJ},
+  year={2006},
+  publisher={Ganga-Jamuna Press}
+}
 
