--- a/teoricas/teorica_03/src/bibliography.tex
+++ b/teoricas/teorica_03/src/bibliography.tex
@@ -4,7 +4,7 @@
     \nocite{siegwart2011introduction}
     \nocite{corke2017robotics}
     \nocite{hartley2003multiple}
-
+    \nocite{misra2006global}
 
     \printbibliography
 
