Slides 01: minor changes

--- a/teoricas/teorica_01/src/course_organization.tex
+++ b/teoricas/teorica_01/src/course_organization.tex
@@ -1,4 +1,14 @@
 \begin{frame}
+	\frametitle{Canales de comunicación}
+	\footnotesize
+	\begin{itemize}
+		\item Página: \href{https://dcc.fceia.unr.edu.ar/es/lcc/521k}{https://dcc.fceia.unr.edu.ar/es/lcc/521k}
+		\item Zulip
+		\item Comunidades
+	\end{itemize}
+\end{frame}
+
+\begin{frame}
 	\frametitle{Programa de la materia (Parte I)}
 	\footnotesize
 	\begin{enumerate}
