--- a/common/beamer_preamble.tex
+++ b/common/beamer_preamble.tex
@@ -13,6 +13,7 @@
 \setbeamertemplate{caption}{\raggedright\insertcaption\par} % elimina la palabra "Figura" del caption
 
 \usepackage[overridenote]{pdfpc} % requires to download manually pdfpc.sty package from https://www.ctan.org/pkg/pdfpc
+% para instalar el pdfpc.sty seguir las instrucciones en https://micropore.wordpress.com/2009/11/28/texhash/
 
 
 % HOW TO SHOW ADDITIONAL SLIDES%
