--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -211,7 +211,7 @@
     title = {Principles of Robot Motion: Theory, Algorithms, and Implementations},
     author = {Howie Choset and Lynch, {Kevin M.} and Seth Hutchinson and George Kantor and Wolfram Burgard and Lydia Kavraki and Sebastian Thrun},
     year = {2005},
-    month = {may},
+    month = {5},
     language = {English},
     isbn = {0262033275},
     publisher = {MIT Press},
