Slides 03: Add gnss images

--- a/teoricas/teorica_03/src/gnss.tex
+++ b/teoricas/teorica_03/src/gnss.tex
@@ -123,7 +123,7 @@
 \begin{frame}
     \frametitle{Sistema GNSS-PPP (Precise Point Positioning)}
     \begin{center}
-        \includegraphics[width=0.3\columnwidth]{gnss_rtk_system.pdf}
+        \includegraphics[width=0.3\columnwidth]{gnss_ppp_rinex.pdf}
     \end{center}
 
 \end{frame}
