Slides 02: minor changes

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -393,7 +393,37 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
     \begin{minipage}{0.70\linewidth}
         \small
         \begin{equation*}
-            {\displaystyle R_{z}\left(\frac{\pi}{2}\right){\begin{bmatrix}1\\0\\0\\\end{bmatrix}}={\begin{bmatrix}\cos \frac{\pi}{2}&-\sin \frac{\pi}{2}&0\\\sin \frac{\pi}{2}&\quad \cos \frac{\pi}{2}&0\\0&0&1\\\end{bmatrix}}{\begin{bmatrix}1\\0\\0\\\end{bmatrix}}={\begin{bmatrix}0&-1&0\\1&0&0\\0&0&1\\\end{bmatrix}}{\begin{bmatrix}1\\0\\0\\\end{bmatrix}}={\begin{bmatrix}0\\1\\0\\\end{bmatrix}}}
+            R_{z}\left(\frac{\pi}{2}\right)
+            \begin{bmatrix}
+                1\\
+                0\\
+                0
+            \end{bmatrix} =
+            \begin{bmatrix}
+                \cos \frac{\pi}{2} & -\sin \frac{\pi}{2} & 0\\
+                \sin \frac{\pi}{2} & \quad \cos \frac{\pi}{2} & 0\\
+                0 & 0 & 1
+            \end{bmatrix}
+            \begin{bmatrix}
+                1\\
+                0\\
+                0
+            \end{bmatrix}=
+            \begin{bmatrix}
+                0 & -1 & 0\\
+                1 & 0 & 0\\
+                0 & 0 & 1
+            \end{bmatrix}
+            \begin{bmatrix}
+                1\\
+                0\\
+                0
+            \end{bmatrix}=
+            \begin{bmatrix}
+                0\\
+                1\\
+                0
+            \end{bmatrix}
         \end{equation*}
     \end{minipage}
 \end{center}
