--- a/common/beamer_preamble.tex
+++ b/common/beamer_preamble.tex
@@ -15,6 +15,8 @@
 \usepackage[overridenote]{pdfpc} % requires to download manually pdfpc.sty package from https://www.ctan.org/pkg/pdfpc
 % para instalar el pdfpc.sty seguir las instrucciones en https://micropore.wordpress.com/2009/11/28/texhash/
 
+%\setbeameroption{show notes on second screen=right} % visualize slides with beamerpresenter slides.pdf
+
 % HOW TO SHOW ADDITIONAL SLIDES%
 \newif\ifadditional % conditional to show additional slides
 %\additionaltrue   % uncomment to show additional slides
