Slides 02: rotation images

--- a/teoricas/teorica_02/src/kinematics.tex
+++ b/teoricas/teorica_02/src/kinematics.tex
@@ -191,7 +191,7 @@
         \item Pregunta: ¿Qué pasa si cada rueda gira en direcciones opuestas? ¿Cuál es el valor de $\dot{x}_{R}$?
         
         
-        \note{Considere, por ejemplo, un robot diferencial en el que cada rueda gira con la misma velocidad pero en direcciones opuestas. El resultado es un robot giratorio estacionario. Como era de esperar, x_R será cero en este caso.}
+        \note{Considere, por ejemplo, un robot diferencial en el que cada rueda gira con la misma velocidad pero en direcciones opuestas. El resultado es un robot giratorio estacionario. Como era de esperar, $x_R$ será cero en este caso.}
         
         
         \item El valor de $\dot{y}_{R}$ es aún más sencillo de calcular. Ninguna de las ruedas puede contribuir al movimiento lateral en el marco de referencia del robot, por lo que $\dot{y}_{R}$ es siempre cero.
