--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -6,7 +6,165 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Rotación en 2D}
+    \frametitle{Rotación 2D}
+
+    \begin{center}
+        \begin{minipage}{0.4\linewidth}
+            \includegraphics[width=\columnwidth]{coordinate_system_rotation.pdf}
+        \end{minipage}
+        \hspace{1em}
+        \begin{minipage}{0.5\linewidth}
+            \begin{equation*}
+                R(\theta) =
+                \toCoord{\fromCoord{
+                    \begin{bmatrix}
+                    \textcolor{red}{\cos \theta} & \textcolor{green}{-\sin \theta}\\
+                    \textcolor{red}{\sin \theta} & \textcolor{green}{\cos \theta}
+                    \end{bmatrix}}{B}}{A}
+            \end{equation*}
+
+            \begin{align*}
+                \toCoord{\fromCoord{
+                    \begin{bmatrix}
+                    \textcolor{red}{\cos \theta} & \textcolor{green}{-\sin \theta}\\
+                    \textcolor{red}{\sin \theta} & \textcolor{green}{\cos \theta}
+                    \end{bmatrix}}{B}}{A}
+                \begin{bmatrix}
+                    1\\
+                    0
+                \end{bmatrix} &=
+                \begin{bmatrix}
+                    \textcolor{red}{\cos \theta}\\
+                    \textcolor{red}{\sin \theta}
+                \end{bmatrix}\\
+                \toCoord{\fromCoord{
+                    \begin{bmatrix}
+                    \textcolor{red}{\cos \theta} & \textcolor{green}{-\sin \theta}\\
+                    \textcolor{red}{\sin \theta} & \textcolor{green}{\cos \theta}
+                    \end{bmatrix}}{B}}{A}
+                \begin{bmatrix}
+                    0\\
+                    1
+                \end{bmatrix} &=
+                \begin{bmatrix}
+                    \textcolor{green}{-\sin \theta}\\
+                    \textcolor{green}{\cos \theta}
+                \end{bmatrix}
+            \end{align*}
+
+        \end{minipage}
+    \end{center}
+    Una matriz de rotación 2D rota puntos en el plano $xy$ en sentido antihorario, con un ángulo $\theta$, alrededor del origen de un sistema de coordenadas.
+\end{frame}
+
+\begin{frame}
+    \frametitle{Ejercicio: Rotación 2D de un punto}
+    
+    \centering
+    
+    \begin{center}
+        \begin{minipage}{0.4\linewidth}
+            \only<1>{
+                \includegraphics[width=\columnwidth]{rotation_2D_example_1.pdf}
+            }
+            \only<2->{
+                \includegraphics[width=\columnwidth]{rotation_2D_example_2.pdf}
+            }
+        \end{minipage}
+        \hspace{1em}
+        \begin{minipage}{0.5\linewidth}
+            \only<1>{
+                \begin{equation*}
+                    \toCoord{\point^{\prime}}{A} = \, ?
+                \end{equation*}
+            }
+            \only<2>{
+                \begin{equation*}
+                    \toCoord{\point^{\prime}}{A} =  \toCoord{\begin{bmatrix}
+                        0\\
+                        1
+                    \end{bmatrix}}{A}
+                \end{equation*}
+            }
+            \only<3>{
+                \begin{align*}
+                    \toCoord{\point^{\prime}}{A} &= \rotationCoord{A}{B} \toCoord{\point}{A}\\
+                    R\left(\frac{\pi}{2}\right) &=
+                    \toCoord{\fromCoord{\begin{bmatrix}
+                        \cos \frac{\pi}{2} & -\sin \frac{\pi}{2} \\
+                        \sin \frac{\pi}{2} & \cos \frac{\pi}{2}
+                    \end{bmatrix}}{B}}{A} =
+                    \toCoord{\fromCoord{\begin{bmatrix}
+                        0 & -1 \\
+                        1 & 0
+                    \end{bmatrix}}{B}}{A}\\
+                    \toCoord{\begin{bmatrix}
+                        0\\
+                        1
+                    \end{bmatrix}}{A} &=
+                    \toCoord{\fromCoord{\begin{bmatrix}
+                        0 & -1 \\
+                        1 & 0
+                    \end{bmatrix}}{B}}{A}
+                    \toCoord{\begin{bmatrix}
+                        1\\
+                        0
+                    \end{bmatrix}}{A}
+                \end{align*}                
+            }
+        \end{minipage}
+    \end{center}
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Ejercicio: Rotación 2D de un punto}
+    
+    \centering
+    
+    \begin{center}
+        \begin{minipage}{0.4\linewidth}
+            \includegraphics[width=\columnwidth]{rotation_2D_example.pdf}
+        \end{minipage}
+        \hspace{1em}
+        \begin{minipage}{0.5\linewidth}
+            \only<1>{
+                \begin{equation*}
+                    \toCoord{\point}{B} = \, ?
+                \end{equation*}
+            }
+            \only<2>{
+                \begin{align*}
+                    \toCoord{\point}{B} &= \rotationCoord{B}{A} \toCoord{\point}{A}\\
+                    R\left(\frac{\pi}{2}\right) &=
+                    \toCoord{\fromCoord{\begin{bmatrix}
+                        \cos \frac{\pi}{2} & -\sin \frac{\pi}{2} \\
+                        \sin \frac{\pi}{2} & \cos \frac{\pi}{2}
+                    \end{bmatrix}}{B}}{A} =
+                    \toCoord{\fromCoord{\begin{bmatrix}
+                        0 & -1 \\
+                        1 & 0
+                    \end{bmatrix}}{B}}{A}\\
+                    \toCoord{\begin{bmatrix}
+                        0\\
+                        -1
+                    \end{bmatrix}}{B} &=
+                    \toCoord{\fromCoord{\begin{bmatrix}
+                        0 & 1 \\
+                        -1 & 0
+                    \end{bmatrix}}{A}}{B}
+                    \toCoord{\begin{bmatrix}
+                        1\\
+                        0
+                    \end{bmatrix}}{A}
+                \end{align*}                
+            }
+        \end{minipage}
+    \end{center}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Rotación 2D: Representación de un punto en otro Sist. de Coord.}
 
     \begin{center}
         \begin{minipage}{0.4\linewidth}
@@ -103,6 +261,32 @@
             }
         \end{minipage}
     \end{center}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Matríz de Rotación 2D: Vectores columna}
+
+    Los vectores columna de una matríz de rotación indican la nueva ubicación de cada eje del sistema de coordenadas canónico.
+
+    \begin{figure}[!h]
+        \includegraphics[width=0.5\columnwidth]{./images/rotation_matrix_column_vectors.pdf}
+    \end{figure}
+
+    \begin{equation*}
+        \begin{bmatrix}
+            \textcolor{red}{r_{00}} & \textcolor{green}{r_{01}}\\
+            \textcolor{red}{r_{10}} & \textcolor{green}{r_{11}}
+        \end{bmatrix}
+        \begin{bmatrix}
+            1\\
+            0
+        \end{bmatrix} =
+        \begin{bmatrix}
+            \textcolor{red}{r_{00}}\\
+            \textcolor{red}{r_{10}}
+        \end{bmatrix}
+    \end{equation*}
+
 \end{frame}
 
 \begin{frame}
@@ -777,6 +961,7 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
         \hspace{1em}
         \begin{minipage}{0.5\linewidth}
             \begin{equation*}
+                R(\theta) =
                 \toCoord{\fromCoord{\begin{bmatrix}
                     \textcolor{red}{\cos \theta} & \textcolor{green}{-\sin \theta} & \textcolor{blue}{0}\\
                     \textcolor{red}{\sin \theta} & \textcolor{green}{\cos \theta} & \textcolor{blue}{0}\\
