--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -118,22 +118,27 @@
 
 
 \begin{frame}
-    \frametitle{Ejercicio: Rotación 2D de un punto}
+    \frametitle{Rotación 2D: Representación de un punto en otro Sist. de Coord.}
     
     \centering
     
     \begin{center}
         \begin{minipage}{0.4\linewidth}
-            \includegraphics[width=\columnwidth]{rotation_2D_example.pdf}
+            \only<1>{
+                \includegraphics[width=\columnwidth]{rotation_2D_axis_example_1.pdf}
+            }
+            \only<2->{
+                \includegraphics[width=\columnwidth]{rotation_2D_axis_example_2.pdf}
+            }
         \end{minipage}
         \hspace{1em}
         \begin{minipage}{0.5\linewidth}
-            \only<1>{
+            \only<2>{
                 \begin{equation*}
                     \toCoord{\point}{B} = \, ?
                 \end{equation*}
             }
-            \only<2>{
+            \only<3>{
                 \begin{align*}
                     \toCoord{\point}{B} &= \rotationCoord{B}{A} \toCoord{\point}{A}\\
                     R\left(\frac{\pi}{2}\right) &=
